fix: altera css imgs-wrap.

--- a/codigo-fonte/MMSalgados/wwwroot/css/site.css
+++ b/codigo-fonte/MMSalgados/wwwroot/css/site.css
@@ -646,3 +646,9 @@ div.dropdown-divider {
     padding-bottom: 6px;
     border-bottom: 1px solid #e5e5e5;
 }
+
+.img-wrap img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
